# dict-derive

./: .travis.yml  Cargo.toml  README.md
src/: from.rs  into.rs  lib.rs
tests/: frompyobject.rs  intopyobject.rs  ui.rs
